# fast_loaded_dice_roller

./: Cargo.toml  LICENSE  README.md
examples/: generator.rs
src/: lib.rs
tests/: panics.rs  rand.rs
