[package]
name = "fast_loaded_dice_roller"
version = "0.1.0"
edition = "2021"
description = "Rust implementation of the novel Fast Loaded Dice Roller algorithm (https://arxiv.org/pdf/2003.03830.pdf)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ryco117/fast_loaded_dice_roller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.8.5"
