[package]
name = "fast_loaded_dice_roller"
version = "0.1.4"
edition = "2021"
authors = ["Ryan Andersen <ryco117@gmail.com>"]
description = "Rust implementation of the novel Fast Loaded Dice Roller algorithm (https://arxiv.org/pdf/2003.03830.pdf)"
license = "MIT"
repository = "https://github.com/ryco117/fast_loaded_dice_roller"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8.5", optional = true }

[dev-dependencies]
clap = { version = "4.3.19", features = ["derive"] }

[[example]]
name = "generator"
required-features = ["rand"]
